syntax = "proto3";
package post;
option go_package = "bluebell_microservices/proto/post;post";

// PostService 定义帖子服务
service PostService {
    // 创建帖子
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);    
    // 获取帖子列表（支持按社区 ID、时间或分数排序）
    rpc GetPostList(GetPostListRequest) returns (GetPostListResponse);
    // 根据帖子 ID 获取详情
    rpc GetPostById(GetPostByIdRequest) returns (GetPostByIdResponse);
    // 搜索帖子
    rpc SearchPosts(SearchPostsRequest) returns (SearchPostsResponse);
    // 投票
    rpc Vote(VoteRequest) returns (VoteResponse);
}

// 帖子列表请求
message GetPostListRequest {
    string search = 1; // 关键字搜索
    int64 page = 2;           // 页码
    int64 size = 3;           // 每页大小
    string order = 4;         // 排序方式（"time" 或 "score"）
    int64 community_id = 5;   // 社区 ID（可选，若为 0 表示不限制社区）
}

// 帖子列表响应（对应 ApiPostDetailRes）
message GetPostListResponse {
    int32 code = 1;           // 状态码
    string msg = 2;           // 消息
    Page page = 3;            // 分页信息
    repeated ApiPostDetail posts = 4; // 帖子列表
}

// 获取帖子详情请求
message GetPostByIdRequest {
    int64 post_id = 1;        // 帖子 ID
}

// 获取帖子详情响应
message GetPostByIdResponse {
    int32 code = 1;           // 状态码
    string msg = 2;           // 消息
    ApiPostDetail post = 3;   // 帖子详情
}

// 搜索帖子请求
message SearchPostsRequest {
    string search = 1;        // 搜索关键词
    int64 page = 2;           // 页码
    int64 size = 3;           // 每页大小
    string order = 4;         // 排序方式（"time" 或 "score"）
    int64 community_id = 5;   // 社区 ID（可选，若为 0 表示不限制社区）
}

// 搜索帖子响应（对应 ApiPostDetailRes）
message SearchPostsResponse {
    int32 code = 1;           // 状态码
    string msg = 2;           // 消息
    Page page = 3;            // 分页信息
    repeated ApiPostDetail posts = 4; // 帖子列表
}

// 创建帖子请求
message CreatePostRequest {
    int64 community_id = 1;   // 社区 ID
    string title = 2;         // 标题
    string content = 3;       // 内容
    int64 author_id = 4;      // 作者 ID
}

// 创建帖子响应
message CreatePostResponse {
    int32 code = 1;           // 状态码
    string msg = 2;           // 消息
}

// 帖子基本信息
message Post {
    int64 post_id = 1;        // 帖子 ID
    int64 author_id = 2;      // 作者 ID
    int64 community_id = 3;   // 社区 ID
    int32 status = 4;         // 状态
    string title = 5;         // 标题
    string content = 6;       // 内容
    string create_time = 7;   // 创建时间（格式：2006-01-02 15:04:05）
    string update_time = 8;   // 更新时间（格式：2006-01-02 15:04:05）
    int64 score = 9;          // 分数（用于排序，尽管 models.Post 无此字段，逻辑层可能提供）
}

// 社区详情（假设结构，根据需要调整）
message CommunityDetail {
    int64 community_id = 1;   // 社区 ID
    string community_name = 2; // 社区名称
    string introduction = 3;  // 社区简介
    string create_time = 4;   // 创建时间
}

// 帖子详情（对应 ApiPostDetail）
message ApiPostDetail {
    Post post = 1;            // 帖子基本信息
    CommunityDetail community = 2; // 社区信息
    string author_name = 3;   // 作者名称
    int64 vote_num = 4;       // 投票数量
}

// 分页信息（对应 Page）
message Page {
    int64 total = 1;          // 总数
    int64 page = 2;           // 当前页码
    int64 size = 3;           // 每页大小
}

// 投票请求
message VoteRequest {
    int64 post_id = 1;    // 帖子ID
    int64 direction = 2;  // 投票方向：1(赞成)、0(取消)、-1(反对)
    int64 user_id = 3;    // 用户ID
}

// 投票响应
message VoteResponse {
    int32 code = 1;       // 状态码
    string msg = 2;       // 消息
}
